# AbletonTask

./: CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt
include/AudioApplication/: AudioApplication.h
include/AudioModules/: AudioModuleUtils.h  IAudioModule.h  IAudioModuleVisitor.h
src/: CMakeLists.txt
src/AudioApplication/: AudioApplication.cpp
src/AudioModules/: AudioModuleBaseVisitor.cpp  AudioModuleBaseVisitor.h  AudioModuleCyclicReferenceFinder.cpp  AudioModuleCyclicReferenceFinder.h  AudioModuleExecutorVisitor.cpp  AudioModuleExecutorVisitor.h  AudioModuleInfeedProcessorVisitor.cpp  AudioModuleInfeedProcessorVisitor.h  AudioModuleUtils.cpp  DelayAudioModule.cpp  DelayAudioModule.h  EchoAudioModule.cpp  EchoAudioModule.h  IAudioModule.cpp  IAudioModuleVisitor.cpp  NoopAudioModule.cpp  NoopAudioModule.h  ReverseAudioModule.cpp  ReverseAudioModule.h
test/: CMakeLists.txt  CatchMain.cpp  Config.h.in  ResetTestData.cmake  tst_AudioApplication.cpp  tst_AudioModules.cpp
test/resources/inputData/: echoreverseloop_tstData.txt  helloworld_tstData.txt  live_tstData.txt  nooutput1_tstData.txt  push_tstData.txt
test/resources/outputRef/: echoreverseloop_tstData_outputref.txt  helloworld_tstData_outputref.txt  live_tstData_outputref.txt  push_tstData_outputref.txt
